--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Name: Gene Merc Sepe</h1>
     <p>Section: FOPI01</p>
     <p>Program: IT-O</p>
+    <img src="photo.png">
 </body>
 </html>
